Collect or delivery page formatted with correct spacing and text, links working.

--- a/members_area/static/members_area/css/members.css
+++ b/members_area/static/members_area/css/members.css
@@ -91,3 +91,61 @@ specified in profile_page.js */
         height: 80px;
     }
 }
+
+/******************************************************* Collect or Delivery */
+.collect-delivery-title {
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+}
+.collect-delivery.signup-container {
+    margin: 120px 0 0 0;
+}
+#delivery_btn {
+    background-color: #fff;
+    
+}
+#delivery_btn a {
+    color: #000;
+}
+#delivery_btn:hover,
+#delivery_btn:focus {
+    background-color: #ffff00;
+}
+.address-info-container {
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+.address-container {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    background-color: #000;
+    color: #fff;
+}
+.location-container {
+    width: 50%;
+    background-color: #fff;
+    color: #000;
+}
+.location-container .category-title {
+    text-align: right;
+    margin: 50px 10px 0 0;
+}
+#store_address {
+    width: fit-content;
+    margin: 10px 0 10px 10px;
+}
+.delivery-info {
+    width: 50%;
+    transform: translate(-50%, 50%);
+    margin-left: 50%;
+    text-align: center;
+}
+
+@media (min-width: 993px) {
+    .location-container .category-title {
+        margin: 40px 10px 0 0;
+    }
+}
